<resources>
    <string name="app_name">Copernicana</string>
    <string name="sign_in_prompt">You need to be signed up to start the app</string>
    <string name="sign_in_no_connection">No connection available</string>
    <string name="sign_in_unknown_error">Unknown Sign-in error</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_in_tap">TAP TO START</string>
    <string name="sign_in_welcome">Welcome To</string>
    <string name="sign_in_logo_cd">Copernicana Logo</string>
    <string name="info_section_title">Explore Earth and Space with Copernicana</string>
    <string name="menu_info">About</string>
    <string name="toolbar_info">About Copernicana</string>
    <string name="astropix_section_title">Astronomy Picture of the Day</string>
    <string name="astropix_section_description">Every day Nasa chooses a significative astronomic picture commented by a professional astronomer.
The Astronomy Picture of the Day section shows the image of the day with the same description provided
by NASA. You can also search for Astronomy Picture of the Day of the past in the great Nasa archive, starting from June 1995.
Save your favorite picture in favorites and watch them again whenever you want.</string>
    <string name="blue_marble_section_title">The Blue Marble</string>
    <string name="blue_marble_section_description">The Blue Marble sections shows images of Earth seen from space taken by the EPIC camera on board of the DISCVR.
Epic images are available in natural and enhanced colors. You can search for Epic images of the past, starting
from June 2015 and save the pictures you prefer in favorites.</string>
    <string name="iss_section_title">Where is the ISS?</string>
    <string name="iss_section_description">The ISS section shows the position of the International Space Station at the moment. The ISS moves really fast, at nearly 28,000 km/h.
In this section you can also find the list of astronauts in space now and some brief information about them.</string>
    <string name="preference_file_key">com.aleperf.pathfinder.copernicana.PREFERENCE_FILE_KEY</string>
    <string name="preference_latest_apod_date_key">latest apod date</string>
    <string name="preference_latest_apod_default_value">default date</string>
    <string name="preference_latest_apod_title_key">latest apod title</string>
    <string name="preference_latest_apod_image_key">latest apod image</string>
    <string name="preference_latest_apod_title_default">No data available</string>
    <string name="preference_latest_apod_image_default">image default value</string>
    <string name="preference_lastest_apod_media_type_key">latest apod format</string>
    <string name="preference_latest_apod_format_default">no format</string>
    <string name="apod_card_rv_title">Astronomy Picture of the Day</string>
    <string name="apod_subtitle">Fascinating pictures of our universe</string>
    <string name="media_type_content_desc_image">Media type: image</string>
    <string name="media_type_content_desc_video">Media type: video</string>
    <string name="intro_card_cd">@null</string>
    <string name="summary_ico_cd">click to select this section</string>
    <string name="epic_title">The Blue Marble</string>
    <string name="epic_subtitle">Earth Images by the EPIC Camera</string>
    <string name="iss_title">Where is the ISS?</string>
    <string name="iss_subtitle">ISS position and astronauts in space now</string>
    <string name="no_description_decorative_image">@null</string>
    <string name="apod_card_image_cd">Astronomy Picture of the Day</string>
    <string name="apod_card_media_type_img">media type icon</string>
    <string name="apod_video_player_cd">Click to start a video</string>
    <string name="apod_detail_share_message">Click to Share this picture</string>
    <string name="apod_detail_fav_message">Click to mark this picture as favorite</string>
    <string name="apod_detail_add_remove_cd">Click to add or remove this picture</string>
    <string name="apod_title_tools_text">Dusty With a Chance of Dust</string>
    <string name="apod_explanation_tools_text">It\'s storm season on Mars. Dusty with a chance of dust is the weather
        report for Gale crater as a recent planet-scale dust storm rages.
        On June 10 looking toward the east-northeast crater rim, the Curiosity rover\'s Mastcam captured this image
        of its local conditions so far. Meanwhile over 2,000 kilometers away, the Opportunity rover
        ceased science operations as the storm grew thicker at its location on the west rim of Endeavour crater,
        and has stopped communicating, waiting out the storm for now. Curiosity is powered by a radioisotope
        thermoelectric generator, but the smaller Opportunity rover uses solar panels to charge its batteries.
        For Opportunity, the increasingly severe lack of sunlight has caused its batteries to run low.</string>
    <string name="apod_date_tools_text">2018-06-16</string>
    <string name="apod_copyright_tools_text">El Cielo de Canarias</string>
    <string name="apod_no_copyright">public domain</string>
    <string name="apod_copyright_label">Copyright: %s</string>
    <string name="apod_detail_card_title">Pic of the day</string>
    <string name="apod_explanation_label">Explanation</string>
    <string name="apod_detail_date">Astronomy Picture of %s</string>
    <string name="section_search">Search</string>
    <string name="section_fav">Favorites Pictures</string>
    <string name="section_all_pics">Latest Pictures</string>
    <string name="apod_no_date">unknown date</string>
    <string name="apod_add_to_favorite">Image added to Favorites</string>
    <string name="apod_remove_from_favorite">Image removed from Favorites</string>
    <string name="apod_share_apod">The Astronomy Picture Of The Day on the Copernicana App</string>
    <string name="apod_share_message">%s is the Astronomy Picture of the Day, watch it on the Copernicana App or
    at this url: %s</string>
    <string name="apod_share_copernicana">Share a Copernicana Article</string>
    <string name="apod_search_toolbar_title">Search Picture of the Day</string>
    <string name="apod_search_select_button">SELECT DATE</string>
    <string name="apod_search_selected_date_label">Date Selected:</string>
    <string name="apod_search_no_date_text_view">No Date Selected</string>
    <string name="search_no_result">No result found for the date selected</string>
    <string name="search_result_found">Found 1 result for the date selected</string>
    <string name="search_result_closest">Found 1 result for the closest date to the one selected: %s</string>
    <string name="search_no_connection">No connection found. Check for a better connection and try to search again.</string>
    <string name="search_failed_connection">Connection to Servers Failed.Check for a better connection and try to search again. </string>
    <string name="search_snack_bar_add_apod_to_fav">Image added to your Favorites</string>
    <string name="search_snack_bar_remove_apod">Image removed from Favorites</string>
    <string name="search_snack_bar_unfavorite">The Image has been removed from Favorites.
        It is still in the list of all Images</string>
    <string name="search_snack_bar_image_added">The image has been added to the database</string>
    <string name="search_snack_bar_remove">The image has been removed from the database</string>
    <string name="apod_favorites_toolbar_title">Favorites Astronomic Pictures</string>
    <string name="apod_display_all_title">Latest Pictures</string>
    <string name="apod_display_all_empty_view">No data display yet.</string>
    <string name="epic_natural_label">Natural Images</string>
    <string name="epic_enhanced_label">Enhanced Images</string>
    <string name="epic_natural_favorites_label">Natural Favorites</string>
    <string name="epic_enhanced_favorites_label">Enhanced Favorites</string>
    <string name="epic_search_label">Search</string>
    <string name="epic_image_grid_cd">image from the epic camera</string>
    <string name="epic_date_tools_text">Jun 26, 2018 10:05:00</string>
    <string name="epic_card_image_cd">image from the Epic camera</string>
    <string name="epic_detail_catpion_tool">This image was taken by NASA\'s EPIC camera onboard the NOAA DSCOVR spacecraft</string>
    <string name="epic_detail_date_and_time_label">Date and Time: </string>
    <string name="epic_detail_centroid_lat_label">Centroid latitude:</string>
    <string name="epic_detail_centroid_long_label">Centroid longitude:</string>
    <string name="epic_detail_distance_to_earth_label">Distance to Earth:</string>
    <string name="epic_detail_distance_to_sun_label">Distance to Sun:</string>
    <string name="epic_detail_distance_sun_to_earth_label">Sun To Earth:</string>
    <string name="epic_detail_tools_lat">12.639322</string>
    <string name="epic_detail_tools_lon">157.602913</string>
    <string name="epic_detail_tools_dist_to_earth">1,592,048 km</string>
    <string name="epic_detail_tools_dist_to_sun">150,281,304 km</string>
    <string name="epic_detail_tools_sun_to_earth">151,858,967 km</string>
    <string name="epic_fav_ico_cd">Click to add this Epic Image to your favorites</string>
    <string name="epic_share_ico_cd">Click to share this Epic Image</string>
    <string name="epic_image_cd">Earth image from the Epic Camera</string>
    <string name="epic_distance_KM_formatter">%d km</string>
    <string name="epic_detail_natural_toolbar_title">Epic Image Details</string>
    <string name="epic_favorites_empty_view_message">No Favorites To Dispay Yet</string>
    <string name="epic_share_message">I\'m watching this image of Earth seen from space on the Copernicana app: %s</string>
    <string name="epic_share_title">Share an Epic Image</string>
    <string name="epic_radio_button_natural">Natural</string>
    <string name="epic_radio_button_enhanced">Enhanced</string>
    <string name="epic_search_button_text">SELECT DATE</string>
    <string name="epic_search_prompt">Type of Image</string>
    <string name="epic_search_title">Search Epic Images</string>
    <string name="epic_search_result_success">These are the results for the date selected </string>
    <string name="epic_search_date_label">Date:</string>
    <string name="epic_search_no_date">No date selected</string>
    <string name="iss_position_velocity">The ISS position changes very fast in time, its velocity is close to 28,000 km/h.</string>
    <string name="iss_position_latitude">Latitude:</string>
    <string name="iss_position_longitude">Longitude:</string>
    <string name="iss_position_check_button">Check ISS position Again</string>
    <string name="iss_pos_date_tools_text">On Jun 23, 11:45:34 the ISS position was:</string>
    <string name="iss_pos_long_tools_text">-88.2772</string>
    <string name="iss_pos_lat_tools_text">13.2669</string>
    <string name="astronauts_craft_label">Craft:</string>
    <string name="astronauts_tool_name">Serena Auñón-Chancellor</string>
    <string name="astronauts_tool_mini_bio">Physician, Electrical Engineer and member of the Expedition 56 to the International Space Station</string>
    <string name="astronauts_tool_craft">ISS</string>
    <string name="astronauts_agency_label">Agency:</string>
    <string name="astronauts_agency_tool">Nasa</string>
    <string name="astronauts_eva_hours_label">Eva Hours:</string>
    <string name="astronauts_eva_hours_tool">68</string>
    <string name="astronauts_eva_minutes_tool">15</string>
    <string name="astronauts_eva_minutes_label">Eva Minutes:</string>
    <string name="astronauts_country_label">Country</string>
    <string name="astronauts_pic_cd">picture of selected astronaut</string>
    <string name="astronauts_wikipedia_icon_cd">Click to open Wikipedia page about this astronaut</string>
    <string name="astronauts_country_tool">United States</string>
</resources>