<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/intro_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/default_colored_text"
        android:textStyle="bold"
        android:textSize="21sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/info_section_title"/>
    <TextView
        android:id="@+id/astropix_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/IntroInfoTitleSection"
        android:textColor="@color/default_colored_text"
        android:text="@string/astropix_section_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       style="@style/IntroInfoContentSection"
        android:text="@string/astropix_section_description"/>
    <TextView
        android:id="@+id/blue_marble_title_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/IntroInfoTitleSection"
        android:text="@string/blue_marble_section_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/IntroInfoContentSection"
        android:text="@string/blue_marble_section_description"/>
    <TextView
        android:id="@+id/iss_title_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/IntroInfoTitleSection"
        android:text="@string/iss_section_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/IntroInfoContentSection"
        android:text="@string/iss_section_description"/>

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>