<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/epic_search_type_label"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_type_label">

        <RadioButton
            android:id="@+id/radio_natural"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epic_radio_button_natural" />

        <RadioButton
            android:id="@+id/radio_enhanced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epic_radio_button_enhanced" />
    </RadioGroup>

    <TextView
        android:id="@+id/epic_search_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/default_colored_text"
        android:text="@string/epic_search_prompt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_title" />

    <Button
        android:id="@+id/epic_search_button"
        style="@style/ButtonCheckIss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/epic_search_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_title" />

    <TextView
        android:id="@+id/epic_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/default_colored_text"
        android:text="@string/epic_search_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/epic_search_date_selected_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/epic_search_date_label"
        app:layout_constraintStart_toStartOf="@+id/epic_search_button"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_button" />

    <TextView
        android:id="@+id/epic_search_date_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/epic_search_date_selected_label"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_date_selected_label"
        tools:text="@string/epic_search_no_date" />

    <TextView
        android:id="@+id/epic_search_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_date_selected"
        tools:text="@string/epic_search_result_success" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epic_search_message" />

</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>