<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"  >
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/iss_pos_image_width"
        android:layout_height="@dimen/iss_pos_image_height"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/space_station_pos" />

    <TextView
        android:id="@+id/iss_position_vel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingEnd="@dimen/iss_pos_padding_side"
        android:text="@string/iss_position_velocity"
        android:textColor="@color/iss_text_color"
        android:textSize="@dimen/iss_pos_intro_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/iss_position_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingEnd="@dimen/iss_pos_padding_side"
        android:textColor="@color/iss_text_color"
        android:textSize="@dimen/iss_pos_intro_text"
        app:layout_constraintStart_toStartOf="@+id/iss_position_vel"
        app:layout_constraintTop_toBottomOf="@+id/iss_position_vel"
        tools:text="@string/iss_pos_date_tools_text" />

    <TextView
        android:id="@+id/iss_pos_lat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/iss_position_latitude"
        android:textColor="@color/iss_title_color"
        android:textSize="@dimen/iss_pos_coord_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iss_position_check"
        app:layout_constraintTop_toBottomOf="@+id/iss_position_check" />

    <TextView
        android:id="@+id/iss_pos_latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/iss_text_color"
        android:textSize="@dimen/iss_pos_coord_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iss_pos_lat_label"
        app:layout_constraintStart_toEndOf="@+id/iss_pos_longitude_label"
        tools:text="@string/iss_pos_lat_tools_text" />

    <TextView
        android:id="@+id/iss_pos_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/iss_position_longitude"
        android:textColor="@color/iss_title_color"
        android:textSize="@dimen/iss_pos_coord_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iss_pos_lat_label"
        app:layout_constraintTop_toBottomOf="@+id/iss_pos_lat_label" />

    <TextView
        android:id="@+id/iss_pos_longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/iss_text_color"
        android:textSize="@dimen/iss_pos_coord_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iss_pos_longitude_label"
        app:layout_constraintStart_toEndOf="@+id/iss_pos_longitude_label"
        tools:text="@string/iss_pos_long_tools_text" />

    <Button
        android:id="@+id/iss_pos_button_check"
        style="@style/ButtonCheckIss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iss_position_check_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iss_pos_longitude_label" />


</android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>