<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apod_search_select_button"
        style="@style/ButtonSearchStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="56dp"
        android:paddingBottom="24dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:text="@string/apod_search_select_button"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_selected_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="8dp"
        style="@style/SearchSelectedDateLabel"
        android:text="@string/apod_search_selected_date_label"
        app:layout_constraintBottom_toTopOf="@+id/date_selected_text_view"
        app:layout_constraintEnd_toStartOf="@+id/date_selected_text_view"
        app:layout_constraintStart_toEndOf="@+id/date_selected_text_view" />

    <TextView
        android:id="@+id/date_selected_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="36dp"
        style="@style/SearchSelectedDateText"
        android:text="@string/apod_search_no_date_text_view"
        app:layout_constraintBottom_toBottomOf="@+id/apod_search_select_button"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/search_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/search_result_found"
        android:padding="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/apod_search_select_button" />

</android.support.constraint.ConstraintLayout>